Minor grammar changes

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
                   <h6>About the project</h6>
                     <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</div>
-                    <p>Red Dwarf is a Virtual Reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Our inspirations for the game include old school space-sims such as Freelancer and Elite Dangerous as well as roguelikes such as FTL.</p>
+                    <p>Red Dwarf is a Virtual Reality space shooter game developed for the HTC Vive. The player controls their spaceship from inside the cockpit, with immersive VR-emulated flightstick controls. The game currently plays in an arcade-style, with the objective being to reach the highest score possible before dying. Inspirations for the game include old school space-sims such as Freelancer and Elite Dangerous as well as roguelikes such as FTL.</p>
                   <h6>Contributions</h6>
                     I worked with a team of 3 other engineers and 2 3D artists to create Red Dwarf. <br>My contributions include:
                     <ul class="center-list">
@@ -293,7 +293,7 @@
                     As this was my first fully comprehensive indie game project I learned a great deal about game design and teamwork as well. My team followed Agile development practices using Trello and Github to coordinate tasks and we all participated in each stage of the game design process. 
                     </p>
                   <h6>Future Plans</h6>
-                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create a variety of zones for players to explore. We hope to release an alpha version of the game some time in the next year.</p>
+                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create a variety of zones for players to explore. We hope to release an alpha version of the game some time next year.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/RedDwarf.zip">
                         <h3 class="btn btn-success btn-lg">
@@ -471,7 +471,7 @@
 
                   <h6>About the project</h6>
                   <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, Photon, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</div>
-                  <p>Elemental Fury is a multiplayer Virtual Reality battle arena game created for the HTC Vive. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock opposing players out of the arena, the last player standing is the winner. Our inspiration for the game was the animated series Avatar and the bender battles from The Legend of Korra.<br>
+                  <p>Elemental Fury is a multiplayer Virtual Reality battle arena game created for the HTC Vive. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock opposing players out of the arena, the last player standing is the winner. My original inspiration for the game was the animated series Avatar and the bender battles from The Legend of Korra.<br>
                   <h6>Contributions</h6>
                     I worked with two others engineers and a 3D artist to create Elemental Fury. <br>My contributions include:
                     <ul class="center-list">
@@ -592,7 +592,7 @@
                     
                   <h6>About the project</h6>
                   <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</div>
-                  <p>InVRasion is an asynchronous multiplayer game that brings together keyboard/mouse and virtual reality gamers. An HTC Vive player plays as a giant alien mech, while up to 4 split-screen players play as different classes of super soldiers who must coordinate their attacks to defeat the alien threat before it destroys an objective. Our inspirations for the game include Pacific Rim and Attack on Titan as well as many of our favorite VR games.
+                  <p>InVRasion is an asynchronous multiplayer game that brings together keyboard/mouse and virtual reality gamers. An HTC Vive player plays as a giant alien mech, while up to 4 split-screen players play as different classes of super soldiers who must coordinate their attacks to defeat the alien threat before it destroys an objective. Inspirations for the game include Pacific Rim and Attack on Titan as well as many popular VR games.
                   <h6>Contributions</h6>
                     I worked with another engineer, a designer, and a 3D artist to create inVRasion. <br>My contributions include:
                     <ul class="center-list">
