More minor grammar fixes

--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                         <li>Missile and laser weapon mechanics</li>
                         <li>Destruction particle effects</li>
                         <li>Game Design (UI, weapon mechanics, interactions)</li>
-                        <li>Project management (Agile using Trello and Github)</li>
+                        <li>Project Management (Agile using Trello and Github)</li>
                     </ul>
                   <h6>What I Learned</h6>
                     <p>
@@ -388,21 +388,21 @@
 
                     <h6>About the project</h6>
                     <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio</div>
-                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of the spells. </p>
+                    <p>A clash between the rhythm and RPG genres, Battle of the Bards lets you fight an RPG boss battle with the power of rock! Players control a party of characters and cast spells from a deck of cards by playing rhythm game segments with a guitar controller or keyboard. Their performance determines the effectiveness of their spells. </p>
                   <h6>Contributions</h6>
-                    I worked with another engineer and 2 artists to create Battle of the Bards. <br>My contributions include:
+                    I worked with another engineer and 2 graphic designers to create Battle of the Bards. <br>My contributions include:
                     <ul class="center-list">
                         <li>Note detection and music generation system</li>
                         <li>Various spell mechanics</li>
                         <li>Player UI and selection system</li>
-                        <li>Turn based health/damage system</li>
+                        <li>Turn based gameplay systems</li>
                         <li>Spell particle effects</li>
                         <li>Game Design (UI, player abilities, interactions)</li>
                     </ul>
                   <h6>What I Learned</h6>
-                    <p>I was fortunate to be able to work with 2 talented artists who created all original assets for our project. I learned a great deal from them about how to communicate effectively with artists, what tools they use, what technical details they need to know, and how to implement their work accurately. One technically skilled artist also taught me how to create particle effects in Unity. I learned more about implementing player UI, turn based mechanics, and the implementation of sounds in games as well.</p>
+                    <p>I was fortunate to be able to work with 2 talented artists who created all original assets for our project. I learned a great deal from them about how to communicate effectively with artists including what tools they use, what technical details they need to know, and how to implement their designes accurately. One technically skilled artist also taught me how to create particle effects in Unity. I learned more about implementing player UI, turn based mechanics, and sound as well.</p>
                   <h6>Future Plans</h6>
-                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to rework the game as a mobile app to make it easily accessible to as many people as possible.</p>
+                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to rework the game as a mobile app to make it easily accessible.</p>
                     <ul class="list-inline item-details">    
                     <a href="builds/BattleOfTheBards.zip">
                         <h3 class="btn btn-success btn-lg">
@@ -471,7 +471,7 @@
 
                   <h6>About the project</h6>
                   <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, Photon, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</div>
-                  <p>Elemental Fury is a multiplayer Virtual Reality battle arena game created for the HTC Vive. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock opposing players out of the arena, the last player standing is the winner. My original inspiration for the game was the animated series Avatar and the bender battles from The Legend of Korra.<br>
+                  <p>Elemental Fury is a multiplayer Virtual Reality battle arena game created for the HTC Vive. Players use hand motions to control the elements of fire, earth, air, and water. They must use these abilities to knock opposing players out of the arena, the last player standing is the winner. My inspiration for the game was the animated series Avatar and the bender battles from The Legend of Korra.<br>
                   <h6>Contributions</h6>
                     I worked with two others engineers and a 3D artist to create Elemental Fury. <br>My contributions include:
                     <ul class="center-list">
@@ -592,7 +592,7 @@
                     
                   <h6>About the project</h6>
                   <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio, SteamVR, VRTK, Blender, HTC Vive</div>
-                  <p>InVRasion is an asynchronous multiplayer game that brings together keyboard/mouse and virtual reality gamers. An HTC Vive player plays as a giant alien mech, while up to 4 split-screen players play as different classes of super soldiers who must coordinate their attacks to defeat the alien threat before it destroys an objective. Inspirations for the game include Pacific Rim and Attack on Titan as well as many popular VR games.
+                  <p>InVRasion is an asynchronous multiplayer game that brings together keyboard/mouse and Virtual Reality gamers. An HTC Vive player plays as a giant alien mech, while up to 4 split-screen players play as different classes of super soldiers who must coordinate their attacks to defeat the alien threat before it destroys an objective. Inspirations for the game include Pacific Rim, Attack on Titan, and many popular VR games.
                   <h6>Contributions</h6>
                     I worked with another engineer, a designer, and a 3D artist to create inVRasion. <br>My contributions include:
                     <ul class="center-list">
@@ -602,7 +602,7 @@
                         <li>World space UI displays</li>
                         <li>Keyboard/Mouse player controls</li>
                         <li>Game Design (UI, abilities &amp; mechanics, goals, interactions)</li>
-                        <li>Project management (Agile using Trello and Github)</li>
+                        <li>Project Management (Agile using Trello and Github)</li>
                     </ul>
                   <h6>What I Learned</h6>
                     <p>InVRasion was originally developed as my Senior Project for my Computer Science degree at Cal Poly Pomona. The project was very open ended, allowing me to experience the process of concepting a game, prototyping it, and then turning it into a fully featured project. I organized a team of friends from my game development club to work with me and it was up to us to push the project as far as we could.
@@ -700,16 +700,16 @@
                     <p>Seismic Shift is a unique take on the infinite runner genre. The player attempts to escape from a massive earthquake by driving their car through procedurally generated city roads. Seismic waves ripple down the streets, chaotic AI drivers flee for their lives, and meanwhile buildings collapse around you. It's your job to escape the disastrous earthquake with your life!
                     </p>
                     <h6>Contributions</h6>
-                    I worked with a team of 2 other engineers and 2 designers to create Seismic Shift. <br>My contributions include:
+                    I worked with a team of 2 other engineers and 2 game designers to create Seismic Shift. <br>My contributions include:
                     <ul class="center-list">
                         <li>Procedural city generation system</li>
-                        <li>Player vehicle controls</li>
                         <li>Mesh-deforming wave generation system</li>
+                        <li>Player vehicle controls</li>
                         <li>Game Design (original concept, mechanics, challenges)</li>
                     </ul>
                   <h6>What I Learned</h6>
                     <p>
-                    This was my first time implementing either procedural generation or waves. I learned to implement a procedural generation system that links pre-built city blocks together before joining another engineer on my team who had been implementing a wave generations system using meshes. Our most dificult challenge was the mesh-deforming algorithm, which taught me a great deal about wave physics and math. I also was fortunate enough to work with 2 game design majors from UCI who helped me flesh out my orignal idea for the game, teaching me a lot about game design in the process. 
+                    This was my first time implementing either procedural generation or waves. I learned to implement a procedural generation system that links pre-built city blocks together before joining another engineer on my team who had been implementing a wave generation system using meshes. Our most dificult challenge was the mesh-deforming algorithm, which taught me a great deal about wave math and physics. I was also fortunate enough to work with 2 game design majors from UCI who helped me flesh out my orignal idea for the game, teaching me a lot more about game design in the process. 
                     </p>
                     <ul class="list-inline item-details">    
                     <a href="builds/SeismicShift.zip">
