Minor content additions

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                     </ul>
                   <h6>What I Learned</h6>
                     <p>
-                    While working on Red Dwarf I learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game also taught me a great deal about vector math. 
+                    While working on Red Dwarf I learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game taught me a great deal about vector math as well. This was also a larger project that required me to learn more about concise and comprehensive architecture design.
                     <br>
                     One of our greatest challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the gyroscopic radar system and realistic controls with haptic feedback, which proved to significantly reduce motion sickness.
                     <br>
@@ -400,7 +400,7 @@
                         <li>Game Design (UI, player abilities, interactions)</li>
                     </ul>
                   <h6>What I Learned</h6>
-                    <p>I was fortunate to be able to work with 2 talented artists who created all original assets for our project. I learned a great deal from them about how to communicate effectively with artists including what tools they use, what technical details they need to know, and how to implement their designes accurately. One technically skilled artist also taught me how to create particle effects in Unity. I learned more about implementing player UI, turn based mechanics, and sound as well.</p>
+                    <p>I was fortunate to be able to work with 2 talented artists who created all original assets for our project. I learned a great deal from them about how to communicate effectively with artists including what tools they use, what technical details they need to know, and how to implement their designs accurately. One technically skilled artist also taught me how to create particle effects in Unity. I learned more about implementing player UI, turn based mechanics, and sound as well.</p>
                   <h6>Future Plans</h6>
                     <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to rework the game as a mobile app to make it easily accessible.</p>
                     <ul class="list-inline item-details">    
@@ -605,9 +605,8 @@
                         <li>Project Management (Agile using Trello and Github)</li>
                     </ul>
                   <h6>What I Learned</h6>
-                    <p>InVRasion was originally developed as my Senior Project for my Computer Science degree at Cal Poly Pomona. The project was very open ended, allowing me to experience the process of concepting a game, prototyping it, and then turning it into a fully featured project. I organized a team of friends from my game development club to work with me and it was up to us to push the project as far as we could.
-                    <br>
-                    This project had me delving deeper into design than ever before as my team and I spent many days playtesting our game and several other VR games to make sure all of the abilities we implemented were fun and balanced. I also learned a lot about organizing a team as my friends and I were able to implement a version of Agile development using Trello to coordinate tasks remotely and Github to share code.
+                    <p>InVRasion was originally developed as my Senior Project for my Computer Science degree at Cal Poly Pomona. The project was very open ended, allowing me to experience the process of concepting a game, prototyping it, and then turning it into a fully featured project. This was also the largest project I had worked on at the time, requiring me to think more carefully about the overall architecture of the game.
+                    <br>I organized a team of friends from my game development club to work with me and it was up to us to push the project as far as we could. This project had me delving deeper into game design than before as my team and I spent many days playtesting our game and several other VR games to make sure all of the abilities we implemented were fun and balanced. I learned a lot about the software development life cycle as my friends and I were able to implement a version of Agile development using Trello to coordinate tasks remotely and Github to share code.
                     </p>
                     <ul class="list-inline item-details">    
                     <a href="builds/InVRasion.zip">
@@ -709,7 +708,7 @@
                     </ul>
                   <h6>What I Learned</h6>
                     <p>
-                    This was my first time implementing either procedural generation or waves. I learned to implement a procedural generation system that links pre-built city blocks together before joining another engineer on my team who had been implementing a wave generation system using meshes. Our most dificult challenge was the mesh-deforming algorithm, which taught me a great deal about wave math and physics. I was also fortunate enough to work with 2 game design majors from UCI who helped me flesh out my orignal idea for the game, teaching me a lot more about game design in the process. 
+                    This was my first time implementing either procedural generation or waves. I learned to implement a procedural generation system that links pre-built city blocks together before joining another engineer on my team who had been implementing a wave generation system using meshes. Our most difficult challenge was the mesh-deforming algorithm, which taught me a great deal about wave math and physics. I was also fortunate enough to work with 2 game design majors from UCI who helped me flesh out my orignal idea for the game, teaching me a lot more about game design in the process. 
                     </p>
                     <ul class="list-inline item-details">    
                     <a href="builds/SeismicShift.zip">
