Content updates for last modal

--- a/index.html
+++ b/index.html
@@ -806,7 +806,24 @@
                     </div>
                     <!-- /Carousel -->
                     
-                    <p>Captain's Edition is by far the most popular mod for the indie game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, and equipment to the game as well as new mechanics. It has received glamourous reviews from video game critics, including <a href="https://www.youtube.com/watch?v=xEJgk7oZe6w">John 'TotalBiscuit' Bain</a>.</p>
+                    <h6>About the project</h6>
+                    <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Java, XML, GIT, Eclipse, GIMP</div>
+                    <p>Captain's Edition is the most popular mod for the roguelike game FTL - Faster Than Light, with a current user base of approximately 20,000. It vastly expands upon the content of the game by adding hundreds of additional scenarios including new lore, weapons, graphics, enemies, and mechanics. It more than doubles the content of the base game and is considered by many to be an unoffical expansion. It has even been reviewed by popular video game critics, such as <a href="https://www.youtube.com/watch?v=xEJgk7oZe6w">John 'TotalBiscuit' Bain</a>.</p>
+                    <h6>Contributions</h6>
+                    I worked with an international community of modders to create Captain's Edition. While I am not the original author of the mod, I am one of its top contributors. <br>My contributions include:
+                    <ul class="center-list">
+                        <li>Tools allowing random generation of mod content (Java)</li>
+                        <li>A complete overhaul of the game's UI (GIMP)</li>
+                        <li>Scripting for additional content (XML)</li>
+                        <li>Game Design (lore, equipment, scenarios)</li>
+                    </ul>
+                  <h6>What I Learned</h6>
+                    <p>
+                    FTL was a difficult game to mod, having no official mod support, as its creators did not anticipate modding. This required us to create our own tools with which to mod the game. One of the tools I helped create and design randomly generates a mod package to change the final boss, the only enemy in the base game that is always the same.
+                    <br>
+                    While working with other modders to create content I also learned a great deal more about game design for a roguelike game. I learned to use GIMP to create custom sprites while working on an overhaul of the game's UI and I learned how to structure an XML database while implementing new content for the game.
+                    </p>
+                    
                     <ul class="list-inline item-details">    
                     <a href="https://subsetgames.com/forum/viewtopic.php?t=15663" value="">
                         <h3 class="btn btn-success btn-lg">
@@ -824,12 +841,6 @@
                         </strong>
                     </li>
                     <br>
-                    <li>
-                      <i class="fa fa-wrench"></i> Tools:
-                      <strong>
-                        <span>Java, GIT, Eclipse, GIMP</span>
-                      </strong>
-                    </li>
                     <li>
                       <i class="fa fa-calendar"></i> Date:
                       <strong>
