Added mention of VRTK

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                     <p>
                     While working on Red Dwarf I learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game taught me a great deal about vector math as well. This was also a larger project with many components that required me to learn more about concise and comprehensive architecture design.
                     <br>
-                    One of our greatest challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the gyroscopic radar system and realistic controls with haptic feedback, which proved to significantly reduce motion sickness.
+                    One of our greatest challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the gyroscopic radar system and realistic controls with haptic feedback (using VRTK), which proved to significantly reduce motion sickness.
                     <br>
                     As this was my first indie game project I learned a great deal about game design and teamwork as well. My team followed Agile development practices using Trello and Github to coordinate tasks and we all participated in each stage of the game design process. 
                     </p>
@@ -476,7 +476,7 @@
                     I worked with two others engineers and a 3D artist to create Elemental Fury. <br>My contributions include:
                     <ul class="center-list">
                         <li>Photon Unity Networking between multiple HTC Vives</li>
-                        <li>Player controls for HTC Vive</li>
+                        <li>Player controls for HTC Vive (using VRTK)</li>
                         <li>Earth element mechanics</li>
                         <li>Game Design (original concept, player abilities, interactions)</li>
                     </ul>
