--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/RedDwarf/RedDwarf.png" class="img-fluid" alt="Red Dwarf">
+              <img src="img/portfolio/RedDwarf/RedDwarf.jpg" class="img-fluid" alt="Red Dwarf">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
@@ -85,7 +85,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/BattleOfTheBards/BattleOfTheBards.png" class="img-fluid" alt="Battle Of The Bards">
+              <img src="img/portfolio/BattleOfTheBards/BattleOfTheBards.jpg" class="img-fluid" alt="Battle Of The Bards">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
@@ -95,7 +95,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/ElementalFury/ElementalFury.png" class="img-fluid" alt="InVRasion">
+              <img src="img/portfolio/ElementalFury/ElementalFury.jpg" class="img-fluid" alt="InVRasion">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
@@ -105,7 +105,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/InVRasion/InVRasion.png" class="img-fluid" alt="InVRasion">
+              <img src="img/portfolio/InVRasion/InVRasion.jpg" class="img-fluid" alt="InVRasion">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
@@ -115,7 +115,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/SeismicShift/SeismicShift.png" class="img-fluid" alt="Seismic Shift">
+              <img src="img/portfolio/SeismicShift/SeismicShift.jpg" class="img-fluid" alt="Seismic Shift">
             </a>
           </div>
           <div class="col-sm-4 portfolio-item sr-icon">
@@ -125,7 +125,7 @@
                   <i class="fa fa-search-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/FTL/FTL.png" class="img-fluid" alt="InVRasion">
+              <img src="img/portfolio/FTL/FTL.jpg" class="img-fluid" alt="InVRasion">
             </a>
           </div>
         </div>
@@ -286,7 +286,7 @@
                     </ul>
                   <h6>What I Learned</h6>
                     <p>
-                    While working on Red Dwarf I learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game taught me a great deal about vector math as well. This was also a larger project with many components that required me to learn more about concise and comprehensive architecture design.
+                    While working on Red Dwarf I learned more about worldspace UI and developing controls for multiple devices (keyboard &amp; Vive) simultaneously. The 3D nature of the game taught me a great deal about vector math as well. This was also a larger project with many components that required me to learn more about concise object-oriented architecture design.
                     <br>
                     One of our greatest challenges was making player controls feel intuitive and responsive while also alleviating motion sickness in VR. I designed and implemented the gyroscopic radar system and realistic controls with haptic feedback (using VRTK), which proved to significantly reduce motion sickness.
                     <br>
