Compressed photos some more

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         <div class="row">
           <div class="col-lg ml-auto">
             <div>
-              <img src="img/profile.png" class="img-fluid img-profile">
+              <img src="img/profile.jpg" class="img-fluid img-profile">
             </div>
               <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
               Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for <strong><a href="https://careers.blizzard.com/en-us/students" class="inline-white">Blizzard Entertainment</a></strong>, where I became experienced with web engineering and WebGL, and was selected to participate in <strong><a href="https://cswithandroid.withgoogle.com/" class="inline-white">Google’s Applied CS program</a></strong>, where I learned to develop Android applications.<br><br>
