--- a/index.html
+++ b/index.html
@@ -157,10 +157,10 @@
               <img src="img/profile.jpg" class="img-fluid img-profile">
             </div>
               <p>I'm an avid programmer who has had a passion for game development all my life. My colleagues know me to be a quick learner, friendly, organized, open-minded, and inspired.<br><br>
-              Through my personal projects, I have become proficient with Unity and have experimented extensively with VR development. I have also interned for <strong><a href="https://careers.blizzard.com/en-us/students" class="inline-white">Blizzard Entertainment</a></strong>, where I became experienced with web engineering and WebGL, and was selected to participate in <strong><a href="https://cswithandroid.withgoogle.com/" class="inline-white">Google’s Applied CS program</a></strong>, where I learned to develop Android applications.<br><br>
+              Through my personal projects, I have become proficient with Unity, familiar with Unreal Engine, and experimented extensively with AR/VR development. I have also interned for <strong><a href="https://careers.blizzard.com/en-us/students" class="inline-white">Blizzard Entertainment</a></strong>, where I became experienced with web engineering and WebGL, and was selected to participate in <strong><a href="https://cswithandroid.withgoogle.com/" class="inline-white">Google’s Applied CS program</a></strong>, where I learned to develop Android applications.<br><br>
               I enjoy collaborating with others and have experience working with large multidisciplinary teams. Having attended nearly a dozen hackathons and game jams, my teams' accomplishments include winning ‘Best Game Hack’ and ‘2nd Place Overall’ at <strong><a href="https://devpost.com/software/battle-of-the-bards" class="inline-white">HackPoly 2017</a></strong>, as well as winning ‘3rd Place Overall’ at <strong><a href="https://devpost.com/software/elemental-showdown" class="inline-white">BeachHacks 2017</a></strong>.
               <br><br>
-              As President of the <strong><a href="http://www.cppgamedev.com/whoweare.html" class="inline-white">Game Design &amp; Development Club</a></strong> at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 80+ students. I also founded the <strong><a href="https://sgdasocal.wixsite.com/sgdasocal" class="inline-white">Student Game Developer Alliance</a></strong> which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
+              As President of the <strong><a href="http://www.cppgamedev.com/whoweare.html" class="inline-white">Game Design &amp; Development Club</a></strong> at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus by mentoring and coordinating game development groups for 60+ students. I also founded the <strong><a href="https://sgdasocal.wixsite.com/sgdasocal" class="inline-white">Student Game Developer Alliance</a></strong> which hosted the largest student-organized game development summit ever, bringing together 200+ students from 9 universities to learn about various professions in the industry.
               <br><br>
               I recently graduated from <strong><a href="https://catalog.cpp.edu/preview_program.php?catoid=5&poid=1222" class="inline-white">Cal Poly Pomona</a></strong> with a degree in Computer Science and I am currently pursuing a full-time programming position. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!</p>
             </div>
@@ -292,8 +292,7 @@
                     <br>
                     As this was my first indie game project I learned a great deal about game design and teamwork as well. My team followed Agile development practices using Trello and Github to coordinate tasks and we all participated in each stage of the game design process. 
                     </p>
-                  <h6>Future Plans</h6>
-                    <p>My team and I have been working to flesh out Red Dwarf with more weapons, enemy types, and missions. We are also currently experimenting with procedural generation of planets and debris to create a variety of zones for players to explore. We hope to release an alpha version of the game some time next year.</p>
+
                     <ul class="list-inline item-details">    
                     <a href="builds/RedDwarf.zip">
                         <h3 class="btn btn-success btn-lg">
@@ -401,8 +400,7 @@
                     </ul>
                   <h6>What I Learned</h6>
                     <p>I was fortunate to be able to work with 3 talented artists who created all original assets for our project. I learned a great deal from them about how to communicate effectively with artists including what tools they use, what technical details they need to know, and how to implement their designs accurately. One technically skilled artist also taught me how to create particle effects in Unity. I learned more about implementing player UI, turn based mechanics, and sound as well.</p>
-                  <h6>Future Plans</h6>
-                    <p>Our team hopes to expand upon the system we created for Battle of the Bards to create a new full-fledged RPG system. I personally plan to rework the game as a mobile app to make it easily accessible.</p>
+
                     <ul class="list-inline item-details">    
                     <a href="builds/BattleOfTheBards.zip">
                         <h3 class="btn btn-success btn-lg">
