--- a/index.html
+++ b/index.html
@@ -732,18 +732,18 @@
                     </div>
                     <!-- /Carousel -->
                   
-                    <p class="modal-intro">Augmented Realms is a project currently in development by my team from Cal Poly Pomona.<br> Learn more be visiting our <a href="http://globalgamejam.org/2017/games/seismic-shift">Patreon</a>.
+                    <p class="modal-intro">Augmented Realms is a project currently in development by my team from Cal Poly Pomona.<br> Learn more by visiting our <a href="http://globalgamejam.org/2017/games/seismic-shift">Patreon</a>.
                     </p>
                     <h6>About the project</h6>
-                    <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio, Vuforia</div>
-                    <p>Augmented Realms is an augmented reality application designed specifically to enhance tabletop roleplaying games. The goal of Augmented Realms is to provide gamers with tools to allow easier world building for DMs and character management for players, all the while immersing the player by breathing life into the game world with custom augmented reality graphics.
+                    <div class="tool-details"><i class="fa fa-wrench"></i> Tools: Unity, C#, GIT, Visual Studio, Vuforia, Xcode</div>
+                    <p>Augmented Realms is an augmented reality application for Android and iOS mobile devices designed specifically to enhance tabletop roleplaying games. The goal of Augmented Realms is to provide gamers with streamlined tools to allow easier world building for DMs and character management for players, all the while immersing the player by breathing life into their game with a shared augmented reality world.
                     </p>
                     <h6>Contributions</h6>
                     I am working with a team of engineers, artists, musicians, and dungeon masters to create Augmented Realms. <br>My contributions so far include:
                     <ul class="center-list">
                         <li>AR tracking with and without markers</li>
                         <li>World design and generation tools</li>
-                        <li>UI design and controls</li>
+                        <li>UI control implementation and design</li>
                     </ul>
 
                     <ul class="list-inline item-details">    
