--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="container">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
                 <span class="brand-name">Kyle Turchik</span>
-                <span class="brand-title">Software Engineer &amp; Game Designer</span>
+                <span class="brand-title">Software Engineer &amp; Game Developer</span>
             </a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           Menu
@@ -202,13 +202,13 @@
             </div>
               <p>I'm an avid programmer with a lifelong passion for game development. My colleagues know me to be a quick learner, friendly, meticulous, open-minded, and inspired. I am driven by collaboration with large multidisciplinary teams and I am adept at working with artists and designers to bring their vision to life.<br><br> 
 
-              My experience has given me opportunities to pitch in on many areas of game development and fed my interests in a variety of game development areas including high-level UI and gameplay implementation, low-level graphics programming, mobile optimization, and tools programming.<br><br>
+              My experience has given me opportunities to pitch in on many areas of development and fed my interests in a variety of programming fields including UI, gameplay, and graphics as well as mobile optimization and tools implementation.<br><br>
 
               Through my personal projects, I have become proficient with Unity and experimented extensively with AR/VR development. I have also interned for <strong><a href="https://careers.blizzard.com/en-us/students" class="inline-white">Blizzard Entertainment</a></strong>, where I became experienced with web engineering and WebGL, and was selected to participate in  <strong><a href="https://cswithandroid.withgoogle.com/" class="inline-white">Google’s Applied CS program</a></strong>, where I learned to develop Android applications. Currently I am working with several AR/VR startups to help get their awesome ideas off the ground.<br><br>
 
-              As President of the <strong><a href="http://www.cppgamedev.com" class="inline-white">Game Design &amp; Development Club</a></strong> at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus. I also founded the <strong><a href="http://sgda.io" class="inline-white">Student Game Developer Alliance</a></strong>, the largest student-organized game development association in California, which inspires and facilitates game development for hundreds of students from 9 universities.</p>
+              As President of the <strong><a href="http://www.cppgamedev.com" class="inline-white">Game Design &amp; Development Club</a></strong> at Cal Poly Pomona, I fostered a culture of game development previously nonexistent on my campus. I also founded the <strong><a href="http://sgda.io" class="inline-white">Student Game Developer Alliance</a></strong>, the largest student-organized game development association in California, which enables hundreds of students from 9 universities to practice skills and learn teamwork through game development.</p>
               
-              I recently graduated from <strong><a href="https://catalog.cpp.edu/preview_program.php?catoid=5&poid=1222" class="inline-white">Cal Poly Pomona</a></strong> with a degree in Computer Science and I am currently pursuing a full-time programming position with a company I can dedicate myself to for many years. If you are interested in working with me to create epic gaming experiences I can't wait to hear from you!
+              I recently graduated from <strong><a href="https://catalog.cpp.edu/preview_program.php?catoid=5&poid=1222" class="inline-white">Cal Poly Pomona</a></strong> with a degree in Computer Science and I am currently pursuing a full-time programming position with a company I can dedicate myself to for many years. If you are interested in working with me to create epic gaming experiences or innovative technology I can't wait to hear from you!
             </div>
           </div>
         </div>
